syntax = "proto3";
import "google/protobuf/any.proto";

option java_multiple_files = true;
option java_package = "cn.zixel.jumeaux.common.lib";
option java_outer_classname = "CommonBaseProto";


package proto;

import "google/protobuf/struct.proto";

option go_package = "./;services";

// 通用grpc协议

// 通用请求协议
message Request {
  Transaction trans = 1;
  map<string, string> headers = 2;
  google.protobuf.Any data = 3;
}

// 通用返回协议
message Reply {
  Transaction trans = 1;
  map<string, string> headers = 2;
  google.protobuf.Any data = 3;
}

message Transaction{
  string requestId = 1;
  int64 timestamp = 2;
  string invokeService = 3;
  string tracer = 4;
  string protocol = 5;
  string invokeMethod = 6;
  string parentSpanId = 7;
  string spanId = 8;
  string traceId = 9;
  string invokeLevel = 10;
  string responseLevel = 11;
  bool traceIgnoreRequest = 12;
  bool traceIgnoreReply = 13;
  string code = 14;
  string info = 15;
  string responseService = 16;
  string responseMethod = 17;
  string remark = 18;
}

message ServiceInfoRpc{
  string name = 1;
  string uuid = 2;
}

message ErrorDetailRpc{
  int64 code = 1;
  string message = 2;
  ServiceInfoRpc serviceInfo = 3;
  google.protobuf.Struct args = 4;
}

message ApiExceptionRpc{
  ErrorDetailRpc errorDetail = 1;
}